# haskell_env

./: README.md  demo.cabal  download.sh  extensions  flake.nix  flake.nix_bak  hello.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
nix/: hix.nix
src/: hello.hs
